--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
-.App {
-    margin: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
+:root {
+    --black: #393E46;
+    --blue: #00ADB5;
+    --lightblue: #8FCCC5;
+    --white: #F7F0F0;
+}
+
+* {
+    margin: 0;
+    padding: 0;
 }
