--- a/src/components/Task_Cards/task_cards.css
+++ b/src/components/Task_Cards/task_cards.css
@@ -30,8 +30,8 @@
 }
 
 .chore-card {
-    background-color: dodgerblue;
-    color: white;
+    background-color: var(--blue);
+    color: var(--white);
     padding: 1rem;
     height: 8rem;
 
