--- a/src/components/Enter_Data/enter_data.css
+++ b/src/components/Enter_Data/enter_data.css
@@ -19,4 +19,14 @@
     bottom: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form {
+    background-color: var(--white);
+    height: 300px;
+    width: 300px;
 }
