--- a/src/components/Enter_Data/enter_data.css
+++ b/src/components/Enter_Data/enter_data.css
@@ -27,6 +27,26 @@
 
 .form {
     background-color: var(--white);
-    height: 300px;
-    width: 300px;
+    padding: 1rem;
+    width: 65%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-info-bar {
+    display: flex;
+    justify-content: space-between;
+    font-size: xx-large;
+}
+
+.users-container {
+    background-color: var(--lightblue);
+    min-height: 1rem;
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: flex-end;
 }
