modal css updated

--- a/src/components/Enter_Data/enter_data.css
+++ b/src/components/Enter_Data/enter_data.css
@@ -13,19 +13,31 @@
 }
 
 .form-container {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.overlay {
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+}
+
 .form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    z-index: 500;
     background-color: var(--white);
     padding: 1rem;
     width: 65%;
@@ -44,9 +56,13 @@
 .users-container {
     background-color: var(--lightblue);
     min-height: 1rem;
+    list-style: none;
+
+    display: flex;
+    justify-content: space-around;
 }
 
-.buttons-container {
-    display: flex;
-    justify-content: flex-end;
+.user {
+    text-decoration: none;
 }
+
