--- a/src/components/Task_Cards/task_cards.css
+++ b/src/components/Task_Cards/task_cards.css
@@ -30,8 +30,8 @@
 }
 
 .chore-card {
-    background-color: var(--blue);
-    color: var(--white);
+    background-color: var(--lightblue);
+    color: var(--black);
     padding: 1rem;
     height: 8rem;
 
@@ -39,7 +39,9 @@
     justify-content: space-between;
     align-items: flex-end;
 }
-
+.chore-card:hover {
+    background-color: var(--blue);
+}
 
 /* LINKS */
 /* Place holder image: https://via.placeholder.com/200x200 */
